--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.whatsnext"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -39,8 +39,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.codepath.libraries:asynchttplcient:0.0.9'
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5" // For Parse library
+    implementation 'com.codepath.libraries:asynchttpclient:0.0.9'
 
 
 }
