--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatsNext">
         <activity
-            android:name=".LogInActivity"
-            android:label="@string/title_activity_log_in"
-            android:theme="@style/Theme.WhatsNext.NoActionBar"></activity>
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".MainActivity">
+
+            android:name=".SignUpActivity"
+            android:label="SignUpActivity"
+            android:theme="@style/Theme.WhatsNext.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        </application>
 
 </manifest>
